--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                     Los siguientes son algunas opciones de lugares turísticos del mundo que anualmente son visitados por millones de personas, haciéndolos especiales y únicos. Conozcámoslos.</p>
                 <div class="primary-white-button">
-                    <a href="#texto-datos" class="scroll-link" data-id="texto-datos">Comenzemos</a>
+                    <a href="#texto-datos" class="scroll-link" data-id="texto-datos">Comencemos</a>
                 </div>
             </div>
         </div>
